@@ -1,5 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Naive implementation of making packages mutable before restarting so
+          that restarter works with native Moose apps using immutable (t0m)
+          - Tests for this (t0m)
         - Bump Moose dependency to 0.70 so that we avoid nasty surprises
           with is_class_loaded and perl 5.80 when you Moosify MyApp.pm (t0m)
         - Clarify that request arguments aren't unescaped automatically
